corrected mixin mispellings, tweaked nav link styles, refined type spacing, added full height styles to container elements so height:100% is more likely to work

--- a/_elements.scss
+++ b/_elements.scss
@@ -34,7 +34,7 @@
 }
 
 .tag {
-    @include scut_truncate;
+    @include scut-truncate;
 
     display: inline-block;
     padding: ($baseunit * 0.1) ($baseunit * 0.5) ($baseunit * 0.15);
